removido a variável Text.

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ width: 100%;
     <a class="nav-link text-white" href="#contato">Contato</a>
 </li>
 <i></i> 
-  <a href="https://api.whatsapp.com/send?phone=44999732333&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202." target="_blank" class="bi bi-whatsapp fs-3 text-white"></a>
+  <a href="https://api.whatsapp.com/send?phone=44999732333" target="_blank" class="bi bi-whatsapp fs-3 text-white"></a>
 </i>
 </ul>
 </div>
@@ -453,19 +453,20 @@ Localização:
 </p>
 
 <p>
-<i class="bi bi-whatsapp text-success"></i>
-WhatsApp: 
-<a href="https://api.whatsapp.com/send?phone=44999732333&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202." 
-target="_blank" 
-class="text-success">
-(44) 99973-2333
-</a>
+  <i class="bi bi-whatsapp text-success"></i>
+  WhatsApp: 
+  <a href="https://api.whatsapp.com/send?phone=44999732333" 
+     target="_blank" 
+     class="text-success">
+    (44) 99973-2333
+  </a>
 </p>
 
 <p>
-<i class="bi bi-telephone text-success"></i>
-Telefone: <a href="tel:+554432230333" target="_blank" 
-class="text-success">(44) 3223-0333</a>
+  <i class="bi bi-telephone text-success"></i>
+  Telefone: 
+  <a href="tel:+554432230333" target="_blank" 
+     class="text-success">(44) 3223-0333</a>
 </p>
 
 <p>
@@ -504,7 +505,8 @@ torneariamotopopa@hotmail.com
 </section>
 
 <footer class="text-center fs-5 pt-5 py-5 bg-dark text-white" id="#">
-  <small>© 2024 Motopopa. Desenvolvido por <a href="https://api.whatsapp.com/send?phone=44998984507&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202." target="_blank" >Ana Vatrim</a>.</small>
+  <small>© 2024 Motopopa. Desenvolvido por <a href="https://api.whatsapp.com/send?phone=44998984507" 
+    target="_blank" >Ana Vatrim</a>.</small>
 </footer>
  
 
