--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@ além de serviços de torno, fresa e plaina em geral.</p>
 
 <section id="contato" class="py-5">
 <div class="container">
-<h2 class="text-center mb-4 fs-1"><strong>Entre em Contato</strong></h2>
+<h2 class="text-center text-white mb-4 fs-1"><strong>Entre em Contato</strong></h2>
 <div class="row">
 
 <div class="col-md-6">
@@ -511,6 +511,14 @@ torneariamotopopa@hotmail.com
  
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+<script type="text/javascript">
+  (function(c,l,a,r,i,t,y){
+      c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+      t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+      y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+  })(window, document, "clarity", "script", "p6ufojrq77");
+</script>
 </body>
 </html>
  
