--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Motopopa: desde 1982, referência em tornearia e recuperação de rodas esportivas e de caminhão em Maringá. Serviços de solda, torno, fresa e plaina. Ligue (44) 3223-0333.">
+    <meta name="keywords" content="motopopa, tornearia Maringá, recuperação de rodas esportivas, diamantamento de rodas, solda em alumínio, serviços de torno e fresa, manutenção de motocicletas">
+    <meta name="author" content="Motopopa">
+    <meta name="robots" content="index, follow">
+
+    <meta property="og:title" content="Motopopa - Tornearia e Recuperação de Rodas em Maringá">
+    <meta property="og:description" content="Desde 1982, referência em serviços de tornearia, solda em alumínio e recuperação de rodas esportivas. Atendimento especializado em Maringá.">
+    <meta property="og:image" content="https://motopopa.vercel.app/images/motopopa-logo.jpg">
+    <meta property="og:url" content="https://motopopa.vercel.app">
+    <meta property="og:type" content="website">
+
     <title>MOTOPOPA</title>
     <link rel="shortcut icon" href="src/imagem/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css">
